Fixes header nav landscape under 480px wide not centered.

--- a/assets/css/sass/elements/_headerMenu.scss
+++ b/assets/css/sass/elements/_headerMenu.scss
@@ -7,6 +7,11 @@
       margin: auto;
     }
 
+    @include respond-to(landscape) { 
+      float: right;
+      margin: 0;
+    }
+
     li {
       float: left;
       margin-left: 8px;
