--- a/assets/css/sass/elements/_logo.scss
+++ b/assets/css/sass/elements/_logo.scss
@@ -8,6 +8,10 @@
       float: none;
     }
 
+    @include respond-to(landscape) { 
+      float: left;
+    }
+
     // ----------------------------- STATE 1
     .state1 & {
       
@@ -27,7 +31,6 @@
         width: 18%;
         margin: 0;
         padding: 2% 0;
-        float: left;
       }
     }
 
