--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,9 @@ p {
     #logo {
       display: block;
       float: none; } }
+  @media screen and (max-height: 600px) and (orientation: landscape) {
+    #logo {
+      float: left; } }
   .state1 #logo {
     width: 149px;
     padding-top: 40px; }
@@ -424,8 +427,7 @@ p {
       .state1 #logo {
         width: 18%;
         margin: 0;
-        padding: 2% 0;
-        float: left; } }
+        padding: 2% 0; } }
   .state2 #logo {
     width: 111px;
     padding-top: 18px; }
@@ -450,6 +452,10 @@ p {
     #header-nav {
       float: none;
       margin: auto; } }
+  @media screen and (max-height: 600px) and (orientation: landscape) {
+    #header-nav {
+      float: right;
+      margin: 0; } }
   #header-nav li {
     float: left;
     margin-left: 8px;
